# Aikaleima-Console

./: .gitignore
loadstamps/: Cargo.toml  settings.txt  stamps.csv
loadstamps/src/: main.rs
returnDevicekey/: Cargo.toml
returnkey/: Cargo.toml  settings.txt
returnkey/src/: main.rs
shared/: Cargo.toml
shared/src/: api_calls.rs  lib.rs  methods.rs  requests.rs  responces.rs
teststamp/: Cargo.toml  run_load_test.bat
